[gd_scene load_steps=3 format=3 uid="uid://clb5ukqbqupyr"]

[ext_resource type="Script" uid="uid://ml3uaq2bpgbo" path="res://entities/ZombieSpawner.gd" id="1_08f87"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rvdpl"]
radius = 300.0

[node name="ZombieSpawner" type="Node2D"]
script = ExtResource("1_08f87")
spawn_distance = 300.0

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_rvdpl")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 0.392157)
scale = Vector2(0.1, 0.1)

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
